demo-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: https-demo
  name: https-demo
spec:
  selector:
    matchLabels:
      run: https-demo
  template:
    metadata:
      labels:
        run: https-demo
    spec:
      containers:
      - image: k8s.gcr.io/serve_hostname:v1.4
        name: hostname
        ports:
        - containerPort: 9376
          protocol: TCP
