demo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-svc
  annotations:
    ingress.kubernetes.io/target-proxy: https-target
spec:
  type: NodePort
  selector:
    run: https-demo
  ports:
  - name: http
    protocol: TCP
    port: 333
    targetPort: 9376
