demo-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ing
spec:
  backend:
    serviceName: demo-svc # Name of the Service targeted by the Ingress
    servicePort: 333 # Should match the port used by the Service
